--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -1,51 +1,30 @@
-# Simple workflow for deploying static content to GitHub Pages
-name: Deploy static content to Pages
+name: CI
 
 on:
-  # Runs on pushes targeting the default branch
   push:
     branches: ["main"]
 
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
-
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
-permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
-# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
-
 jobs:
-  # Single deploy job since we're just deploying
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+  build:
+
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Setup Pages
-        uses: actions/configure-pages@v3
-        env: 
-          REACT_APP_PASSWORD: ${{ secrets.REACT_APP_PASSWORD }}
-          REACT_APP_READ_GITHUB_TOKEN:  ${{ secrets.REACT_APP_READ_GITHUB_TOKEN }}
-          REACT_APP_WRITE_GITHUB_TOKEN: ${{ secrets.REACT_APP_WRITE_GITHUB_TOKEN }}
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v2
-        env: 
-          REACT_APP_PASSWORD: ${{ secrets.REACT_APP_PASSWORD }}
-          REACT_APP_READ_GITHUB_TOKEN:  ${{ secrets.REACT_APP_READ_GITHUB_TOKEN }}
-          REACT_APP_WRITE_GITHUB_TOKEN: ${{ secrets.REACT_APP_WRITE_GITHUB_TOKEN }}
-        with:
-          # Upload entire repository
-          path: '.'
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v2
+    
+    - name: Checkout
+      uses: actions/checkout@v1
+
+    - name: Build
+      run: |
+        npm install
+        npm run-script build
+      env: 
+        REACT_APP_PASSWORD: ${{ secrets.REACT_APP_PASSWORD }}
+        REACT_APP_READ_GITHUB_TOKEN: ${{ secrets.REACT_APP_READ_GITHUB_TOKEN }}
+        REACT_APP_WRITE_GITHUB_TOKEN: ${{ secrets.REACT_APP_WRITE_GITHUB_TOKEN }}
+    - name: Deploy
+      uses: JamesIves/github-pages-deploy-action@releases/v3
+      with:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        BRANCH: gh-pages
+        FOLDER: build
